--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,21 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Navigation from "../components/Navigation.astro";
+import Navigation from "../components/Navigation/Navigation.astro";
 ---
 
 <Layout title="Welcome to Astro.">
   <Navigation />
 </Layout>
+
+<style is:global>
+  @import url("https://fonts.cdnfonts.com/css/poppins");
+
+  :root {
+    --CL-neutral-black: #1f1d2b;
+  }
+
+  body {
+    font-family: "Poppins", sans-serif;
+    background-color: var(--CL-neutral-black);
+  }
+</style>
