--- a/src/components/Navigation/Navigation.astro
+++ b/src/components/Navigation/Navigation.astro
@@ -6,7 +6,7 @@ import NavigationItem from "./NavigationItem.astro";
 
 <nav class="fixed top-0 z-20 w-full border-b border-gray-20">
   <div
-    class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto"
+    class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto sm:py-5"
   >
     <a
       href="https://flowbite.com/"
@@ -21,8 +21,8 @@ import NavigationItem from "./NavigationItem.astro";
     <div class="flex space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse">
       <button
         type="button"
-        class="px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300"
-        >Get started</button
+        class="px-4 py-4 text-xs font-light tracking-widest text-center text-white uppercase transition border rounded-xl sm:px-6 hover:bg-indigo-700 focus:ring-4 focus:outline-none focus:ring-blue-300"
+        >Contact</button
       >
       <button
         data-collapse-toggle="navbar-sticky"
