Finish Navigation Menu Mobile/Desktop.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import Navigation from "../components/Navigation/Navigation.astro";
 
   :root {
     --CL-neutral-black: #1f1d2b;
+    --CL-primary-blue: #2e3191;
   }
 
   body {
