--- a/src/components/Navigation/Navigation.astro
+++ b/src/components/Navigation/Navigation.astro
@@ -4,7 +4,7 @@ import BrandImage from "../../assets/images/brand.svg";
 import NavigationItem from "./NavigationItem.astro";
 ---
 
-<nav class="fixed top-0 z-20 w-full border-b border-gray-20">
+<nav class="fixed top-0 z-20 w-full" id="navigation">
   <div
     class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto sm:py-5"
   >
@@ -15,19 +15,21 @@ import NavigationItem from "./NavigationItem.astro";
       <Image
         src={BrandImage}
         alt="RysthCraft's Business Logo"
-        class="w-20 sm:w-32"
+        class="w-28 sm:w-32"
       />
     </a>
-    <div class="flex space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse">
+    <div
+      class="flex items-center space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse"
+    >
       <button
         type="button"
-        class="px-4 py-4 text-xs font-light tracking-widest text-center text-white uppercase transition border rounded-xl sm:px-6 hover:bg-indigo-700 focus:ring-4 focus:outline-none focus:ring-blue-300"
+        class="px-4 py-3 text-xs font-medium tracking-widest text-center text-white uppercase transition border sm:py-4 rounded-xl sm:px-6 hover:shadow-2xl hover:shadow-white/20 md:hover:transition hover:bg-white hover:text-gray-900"
         >Contact</button
       >
       <button
         data-collapse-toggle="navbar-sticky"
         type="button"
-        class="inline-flex items-center justify-center w-10 h-10 p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
+        class="inline-flex items-center justify-center w-10 h-10 p-2 text-sm text-white rounded-lg md:hidden hover:shadow-2xl hover:shadow-white/20 hover:transition hover:bg-white hover:text-gray-900"
         aria-controls="navbar-sticky"
         aria-expanded="false"
       >
@@ -53,13 +55,32 @@ import NavigationItem from "./NavigationItem.astro";
       id="navbar-sticky"
     >
       <ul
-        class="flex flex-col p-4 mt-4 text-white border border-gray-100 rounded-lg md:p-0 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0"
+        class="flex flex-col p-4 mt-4 text-white border border-gray-100 rounded-lg md:p-0 md:space-x-4 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0"
       >
-        <NavigationItem title="Home" path="#" />
-        <NavigationItem title="About" path="#" />
-        <NavigationItem title="Projects" path="#" />
-        <NavigationItem title="Contacts" path="#" />
+        <NavigationItem title="Home" path="/" />
+        <NavigationItem title="About" path="/about" />
+        <NavigationItem title="Projects" path="/projects" />
+        <NavigationItem title="Contacts" path="/contacts" />
       </ul>
     </div>
   </div>
 </nav>
+
+<script>
+  const navigation = document.querySelector("#navigation");
+  const navLinks = navigation.querySelectorAll("a");
+  const currentURL = window.location.href;
+
+  navLinks.forEach((link: HTMLAnchorElement) => {
+    if (link.href === currentURL) {
+      link.classList.add(
+        "bg-indigo-700",
+        "sm:bg-transparent",
+        "md:text-indigo-500",
+        "md:hover:text-white",
+        "md:border-b-2",
+        "md:border-indigo-500",
+      );
+    }
+  });
+</script>
