--- a/src/components/Navigation/NavigationItem.astro
+++ b/src/components/Navigation/NavigationItem.astro
@@ -5,7 +5,7 @@ const { title, path } = Astro.props;
 <li>
   <a
     href={path}
-    class="block px-3 py-2 text-xs font-light tracking-widest uppercase rounded md:bg-transparent md:p-0"
+    class="block p-2 text-xs font-medium tracking-widest uppercase bg-transparent rounded-md md:py-3 md:hover:scale-110 md:transition md:hover:border-gray-200"
     aria-current="page">{title}</a
   >
 </li>
