--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Navigation from "../components/Navigation/Navigation.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="RysthCraft | Software Developer | Professional Websites">
   <Navigation />
 </Layout>
 
