--- a/src/components/Navigation/Navigation.astro
+++ b/src/components/Navigation/Navigation.astro
@@ -1,5 +1,7 @@
 ---
 import { Image } from "astro:assets";
+import { Icon } from "";
+
 import BrandImage from "../../assets/images/brand.svg";
 import NavigationItem from "./NavigationItem.astro";
 ---
@@ -8,16 +10,11 @@ import NavigationItem from "./NavigationItem.astro";
   <div
     class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto sm:py-5"
   >
-    <a
-      href="https://flowbite.com/"
-      class="flex items-center space-x-3 rtl:space-x-reverse"
-    >
-      <Image
-        src={BrandImage}
-        alt="RysthCraft's Business Logo"
-        class="w-28 sm:w-32"
-      />
-    </a>
+    <Image
+      src={BrandImage}
+      alt="RysthCraft's Business Logo"
+      class="w-28 sm:w-32"
+    />
     <div
       class="flex items-center space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse"
     >
@@ -34,20 +31,7 @@ import NavigationItem from "./NavigationItem.astro";
         aria-expanded="false"
       >
         <span class="sr-only">Open main menu</span>
-        <svg
-          class="w-5 h-5"
-          aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 17 14"
-        >
-          <path
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M1 1h15M1 7h15M1 13h15"></path>
-        </svg>
+        <Icon pack="fa" name="bars" />
       </button>
     </div>
     <div
