--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Navigation from "../components/Navigation/Navigation.astro";
 ---
 
-<Layout title="RysthCraft | Software Developer | Professional Websites">
-  <Navigation />
-</Layout>
+<Layout title="RysthCraft | Software Developer | Professional Websites" />
 
 <style is:global>
   @import url("https://fonts.cdnfonts.com/css/poppins");
