--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,3 +20,4 @@ const { title } = Astro.props;
     <slot />
   </body>
 </html>
+<script is:inline src="./node_modules/preline/preline.js"></script>
