--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,5 +18,9 @@ const { title } = Astro.props;
   </head>
   <body class="h-full">
     <slot />
+    <script
+      is:inline
+      src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"
+    ></script>
   </body>
 </html>
