--- a/src/components/Navigation/Navigation.astro
+++ b/src/components/Navigation/Navigation.astro
@@ -18,7 +18,9 @@ import NavigationItem from "./NavigationItem.astro";
         class="w-24 sm:w-32"
       />
     </a>
-    <div class="flex space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse">
+    <div
+      class="flex items-center space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse"
+    >
       <button
         type="button"
         class="px-4 py-2 text-xs tracking-widest text-center text-white uppercase transition border rounded-lg sm:px-6 sm:py-4 hover:bg-white hover:text-gray-900"
