--- a/src/components/Navigation/NavigationItem.astro
+++ b/src/components/Navigation/NavigationItem.astro
@@ -10,7 +10,7 @@ const { text, route } = Astro.props;
 <li>
   <a
     href={route}
-    class="block px-3 py-2 text-xs tracking-widest text-white uppercase rounded shadow md:p-0 md:hover:text-cyan-300 drop-shadow nav-item"
+    class="block px-3 py-2 text-xs tracking-widest text-white uppercase rounded md:p-0 md:hover:text-cyan-300 drop-shadow nav-item"
     aria-current="page">{text}</a
   >
 </li>
