--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Navigation from "../components/Navigation/Navigation.astro";
+import Hero from "./sections/index/Hero.astro";
 ---
 
 <Layout title="RysthCraft | Software Developer | Professional Websites">
   <Navigation />
+  <Hero />
 </Layout>
 <style is:global>
   @import url("https://fonts.cdnfonts.com/css/poppins");
