--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,4 +20,9 @@ import Hero from "./sections/index/Hero.astro";
     font-family: "Poppins", sans-serif;
     background-color: var(--CL-neutral-black);
   }
+
+  button,
+  a {
+    @apply md:hover:scale-105 md:active:scale-95 md:transition;
+  }
 </style>
