--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,4 +25,16 @@ import Hero from "./sections/index/Hero.astro";
   a {
     @apply md:hover:scale-105 md:active:scale-95 md:transition;
   }
+
+  .btn {
+    @apply block p-4 px-6 text-xs text-center rounded-lg sm:w-40 sm:text-base;
+  }
+
+  .btn-gradient {
+    @apply bg-gradient-to-tl from-cyan-500 to-purple-500;
+  }
+
+  .btn-secondary {
+    @apply outline outline-1 md:hover:bg-white md:hover:text-gray-900;
+  }
 </style>
