--- a/src/pages/sections/index/Hero.astro
+++ b/src/pages/sections/index/Hero.astro
@@ -25,12 +25,12 @@ import HeroImage from "../../../assets/images/hero.png";
         <Link
           text="GitHub"
           route="https://github.com/Rysth"
-          className="btn-gradient"
+          classVariant="btn-gradient"
         />
         <Link
           text="LinkedIn"
           route="https://www.linkedin.com/in/john-palacios-rysthcraft/"
-          className="btn-secondary"
+          classVariant="btn-secondary"
         />
       </div>
     </header>
