--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,14 +27,14 @@ import Hero from "./sections/index/Hero.astro";
   }
 
   .btn {
-    @apply block p-4 px-6 text-xs text-center rounded-lg sm:w-40 sm:text-base;
+    @apply border block p-4 px-6 text-xs text-center rounded-lg sm:w-32 sm:text-sm;
   }
 
   .btn-gradient {
-    @apply bg-gradient-to-tl from-cyan-500 to-purple-500;
+    @apply border-gray-900 bg-gradient-to-tl from-cyan-500 to-purple-500;
   }
 
   .btn-secondary {
-    @apply outline outline-1 md:hover:bg-white md:hover:text-gray-900;
+    @apply border md:hover:bg-white md:hover:text-gray-900 text-white;
   }
 </style>
