--- a/src/components/ui/Link/Link.astro
+++ b/src/components/ui/Link/Link.astro
@@ -12,7 +12,7 @@ const { text, route, classVariant } = Astro.props;
   href={route}
   target="_blank"
   rel="noopener noreferrer"
-  class={`btn ${classVariant}`}
+  class={`flex items-center justify-center gap-2  ${classVariant}`}
 >
   {text}</a
 >
