--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../layouts/Layout.astro";
 import Navigation from "../components/Navigation/Navigation.astro";
+import Layout from "../layouts/Layout.astro";
 import Hero from "./sections/index/Hero.astro";
 ---
 
@@ -27,7 +27,7 @@ import Hero from "./sections/index/Hero.astro";
   }
 
   .btn {
-    @apply border block p-4 px-6 text-xs text-center rounded-lg sm:w-32 sm:text-sm;
+    @apply border p-4 px-6 text-xs text-center rounded-lg sm:w-32 sm:text-sm;
   }
 
   .btn-gradient {
