Added animations and Hero Section finished.

--- a/src/components/Navigation/Navigation.astro
+++ b/src/components/Navigation/Navigation.astro
@@ -5,7 +5,9 @@ import Button from "../ui/Button/Button.astro";
 import NavigationItem from "./NavigationItem.astro";
 ---
 
-<nav class="fixed top-0 z-20 w-full start-0">
+<nav
+  class="fixed top-0 z-20 w-full start-0 animate__animated animate__fadeInDown backdrop-blur-lg"
+>
   <div
     class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto sm:py-5"
   >
