--- a/src/pages/sections/index/Hero.astro
+++ b/src/pages/sections/index/Hero.astro
@@ -36,7 +36,7 @@ import HeroImage from "../../../assets/images/hero.png";
       class="animate__animated animate__pulse animate__infinite animate__slower"
     >
       <picture
-        class="block max-w-[300px] sm:max-w-[350px] md:max-w-[500px] p-4 sm:p-6 border-2 mx-auto md:ml-auto md:mr-0 rounded-3xl border-t-violet-500 border-l-violet-500 border-r-cyan-500 border-b-cyan-400 relative backdrop-blur-3xl"
+        class="block max-w-[300px] sm:max-w-[350px] md:max-w-[500px] p-4 border-2 mx-auto md:ml-auto md:mr-0 rounded-3xl border-t-violet-500 border-l-violet-500 border-r-cyan-500 border-b-cyan-400 relative backdrop-blur-3xl"
       >
         <span
           class="absolute w-32 h-32 rounded-full md:w-40 md:h-40 -inset-10 bg-violet-500/40 blur-3xl -z-10"
