--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,10 +48,10 @@ const { title } = Astro.props;
   }
 
   .btn-gradient {
-    @apply border-gray-900 bg-gradient-to-tl from-cyan-500 to-purple-500;
+    @apply border-[var(--CL-neutral-black)] bg-gradient-to-br from-violet-600 to-cyan-500;
   }
 
   .btn-secondary {
-    @apply border md:hover:bg-white md:hover:text-gray-900 text-white;
+    @apply border md:hover:bg-white md:hover:text-[var(--CL-neutral-black)] text-white;
   }
 </style>
