--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Navigation from "../components/Navigation/Navigation.astro";
 import Layout from "../layouts/Layout.astro";
 import HeroSection from "./sections/index/HeroSection.astro";
+import FeatureSection from "./sections/index/FeatureSection.astro";
 ---
 
 <Layout title="RysthCraft | Software Developer | Professional Websites">
   <Navigation />
   <HeroSection />
+  <FeatureSection />
 </Layout>
