--- a/src/pages/sections/index/HeroSection.astro
+++ b/src/pages/sections/index/HeroSection.astro
@@ -1,7 +1,8 @@
 ---
 import { Image } from "astro:assets";
-import Link from "../../../components/ui/Link/Link.astro";
+import { FaGithub, FaLinkedin } from "react-icons/fa";
 import HeroImage from "../../../assets/images/hero.png";
+import Link from "../../../components/ui/Link/Link.jsx";
 ---
 
 <section class="h-screen animate__animated animate__fadeIn animate__delay-1s">
@@ -20,16 +21,18 @@ import HeroImage from "../../../assets/images/hero.png";
         Rails.
       </p>
       <div class="flex items-center justify-center gap-3 md:justify-start">
+        <Link route="https://github.com/Rysth" classVariant="btn btn-gradient">
+          <FaGithub />
+           GitHub
+        </Link>
+
         <Link
-          text="GitHub"
-          route="https://github.com/Rysth"
-          classVariant="btn btn-gradient"
-        />
-        <Link
-          text="LinkedIn"
           route="https://www.linkedin.com/in/john-palacios-rysthcraft/"
           classVariant="btn btn-secondary"
-        />
+        >
+          <FaLinkedin />
+           LinkedIn
+        </Link>
       </div>
     </header>
     <main
@@ -43,7 +46,7 @@ import HeroImage from "../../../assets/images/hero.png";
         ></span>
         <Image src={HeroImage} alt="" class="w-full rounded-3xl" />
         <span
-          class="absolute w-32 h-32 rounded-full inset-48 md:inset-2/3 lg:inset-96 md:w-40 md:h-40 bg-cyan-400/40 blur-3xl -z-10"
+          class="absolute w-32 h-32 rounded-full inset-48 md:inset-2/4 lg:inset-96 md:w-40 md:h-40 bg-cyan-400/40 blur-3xl -z-10"
         ></span>
       </picture>
     </main>
