Added animations to feature section.

--- a/src/components/ui/Card/Card.astro
+++ b/src/components/ui/Card/Card.astro
@@ -15,7 +15,7 @@ const { imagePreview, title, technology, previewLink, gitHubLink } =
   Astro.props;
 ---
 
-<article>
+<article class="animate__animated animate__fadeInUp animate__delay-1s">
   <a href={previewLink} target="_blank" rel="noopener noreferrer">
     <Image
       src={imagePreview}
