--- a/src/pages/sections/index/FeatureSection.astro
+++ b/src/pages/sections/index/FeatureSection.astro
@@ -35,7 +35,7 @@ const projectsData = [
 ---
 
 <section
-  class="container max-w-screen-xl p-4 py-16 mx-auto text-white lg:py-28"
+  class="container max-w-screen-xl p-4 py-16 mx-auto text-white lg:py-28 animate__animated animate__fadeIn"
 >
   <header class="flex items-center justify-between mb-10">
     <h2
