--- a/src/pages/sections/index/HeroSection.astro
+++ b/src/pages/sections/index/HeroSection.astro
@@ -5,9 +5,9 @@ import HeroImage from "../../../assets/images/hero.png";
 import Link from "../../../components/ui/Link/Link.jsx";
 ---
 
-<section class="h-screen animate__animated animate__fadeIn animate__delay-1s">
+<section class="animate__animated animate__fadeIn animate__delay-1s">
   <article
-    class="grid max-w-screen-xl gap-10 p-4 mx-auto py-28 md:grid-cols-2 md:py-40"
+    class="grid max-w-screen-xl gap-10 p-4 mx-auto py-28 md:grid-cols-2 md:py-40 md:pb-28"
   >
     <header
       class="flex flex-col justify-center gap-5 text-center text-white sm:gap-7 md:text-left"
