--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Navigation from "../components/Navigation/Navigation.astro";
 import Layout from "../layouts/Layout.astro";
 import HeroSection from "./sections/index/HeroSection.astro";
 import FeatureSection from "./sections/index/FeatureSection.astro";
+import Footer from "../components/Footer/Footer.astro";
 ---
 
 <Layout title="RysthCraft | Software Developer | Professional Websites">
   <Navigation />
   <HeroSection />
   <FeatureSection />
+  <Footer />
 </Layout>
