--- a/src/pages/sections/index/FeatureSection.astro
+++ b/src/pages/sections/index/FeatureSection.astro
@@ -2,6 +2,7 @@
 import Project1 from "../../../assets/images/projects/project_1.png";
 import Project2 from "../../../assets/images/projects/project_2.png";
 import Project3 from "../../../assets/images/projects/project_3.png";
+import Project4 from "../../../assets/images/projects/project_4.png";
 import Card from "../../../components/ui/Card/Card.astro";
 import Link from "../../../components/ui/Link/Link.jsx";
 import { FaArrowRight, FaBars } from "react-icons/fa";
@@ -30,6 +31,14 @@ const projectsData = [
     imagePreview: Project3,
     previewLink: "https://react-smartcommerce.onrender.com/",
     gitHublink: "https://github.com/Rysth/REACT-eCommerce",
+  },
+  {
+    id: "4",
+    title: "TrámitesEC",
+    technology: "React",
+    imagePreview: Project4,
+    previewLink: "https://react-tramitesec.netlify.app/session",
+    gitHublink: "https://github.com/Rysth/REACT-TramitesEC",
   },
 ];
 ---
