--- a/src/pages/sections/index/FeatureSection.astro
+++ b/src/pages/sections/index/FeatureSection.astro
@@ -12,7 +12,7 @@ const projectsData = [
     id: "1",
     title: "UpdateEC",
     technology: "React",
-    imagePreview: Project1,
+    previewImage: Project1,
     previewLink: "https://updateec.netlify.app/",
     gitHublink: "https://github.com/Rysth/REACT-UpdateEC",
   },
@@ -20,7 +20,7 @@ const projectsData = [
     id: "2",
     title: "JP Refrigeración",
     technology: "Astro",
-    imagePreview: Project2,
+    previewImage: Project2,
     previewLink: "https://jprefrigeracion.netlify.app/",
     gitHublink: "https://github.com/Rysth/ASTRO-JPRefrigeracion",
   },
@@ -28,7 +28,7 @@ const projectsData = [
     id: "3",
     title: "SmartCommerce",
     technology: "React",
-    imagePreview: Project3,
+    previewImage: Project3,
     previewLink: "https://react-smartcommerce.onrender.com/",
     gitHublink: "https://github.com/Rysth/REACT-eCommerce",
   },
@@ -36,8 +36,8 @@ const projectsData = [
     id: "4",
     title: "TrámitesEC",
     technology: "React",
-    imagePreview: Project4,
-    previewLink: "https://react-tramitesec.netlify.app/session",
+    previewImage: Project4,
+    previewLink: "https://react-tramitesec.netlify.app/",
     gitHublink: "https://github.com/Rysth/REACT-TramitesEC",
   },
 ];
@@ -66,7 +66,7 @@ const projectsData = [
           <Card
             title={project.title}
             technology={project.technology}
-            imagePreview={project.imagePreview}
+            previewImage={project.previewImage}
             previewLink={project.previewLink}
             gitHubLink={project.gitHublink}
           />
