--- a/src/components/Navigation/Navigation.astro
+++ b/src/components/Navigation/Navigation.astro
@@ -1,8 +1,9 @@
 ---
 import { Image } from "astro:assets";
+import { FaBars } from "react-icons/fa";
 import BrandImage from "../../assets/images/brand.svg";
-import Button from "../ui/Button/Button.astro";
 import NavigationItem from "./NavigationItem.astro";
+import Link from "../ui/Link/Link";
 ---
 
 <nav
@@ -21,7 +22,12 @@ import NavigationItem from "./NavigationItem.astro";
     <div
       class="flex items-center space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse"
     >
-      <Button text="Contact" classVariant="btn-secondary" />
+      <Link
+        route="http://tinyurl.com/contact-wsp"
+        classVariant="btn btn-secondary uppercase"
+      >
+        Contact
+      </Link>
       <button
         data-collapse-toggle="navbar-sticky"
         type="button"
@@ -30,20 +36,7 @@ import NavigationItem from "./NavigationItem.astro";
         aria-expanded="false"
       >
         <span class="sr-only">Open main menu</span>
-        <svg
-          class="w-5 h-5"
-          aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 17 14"
-        >
-          <path
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M1 1h15M1 7h15M1 13h15"></path>
-        </svg>
+        <FaBars className="text-3xl" />
       </button>
     </div>
     <div
