Finish Home Page.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,6 +51,10 @@ const { title } = Astro.props;
     @apply border-[var(--CL-neutral-black)] bg-gradient-to-br from-violet-600 to-cyan-500;
   }
 
+  .btn-primary {
+    @apply border-transparent bg-[var(--CL-primary-blue)] text-white;
+  }
+
   .btn-secondary {
     @apply border md:hover:bg-white md:hover:text-[var(--CL-neutral-black)] text-white;
   }
