--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Navigation from "../components/Navigation/Navigation.astro";
 import Layout from "../layouts/Layout.astro";
 import HeroSection from "./sections/index/HeroSection.astro";
 import FeatureSection from "./sections/index/FeatureSection.astro";
+import ContactSection from "./sections/index/ContactSection.astro";
 import Footer from "../components/Footer/Footer.astro";
 ---
 
@@ -10,5 +11,6 @@ import Footer from "../components/Footer/Footer.astro";
   <Navigation />
   <HeroSection />
   <FeatureSection />
+  <ContactSection />
   <Footer />
 </Layout>
