Create Home Page.

--- a/src/pages/sections/index/HeroSection.astro
+++ b/src/pages/sections/index/HeroSection.astro
@@ -17,8 +17,7 @@ import Link from "../../../components/ui/Link/Link.jsx";
       </h1>
       <p class="text-sm text-gray-300 sm:text-base md:text-lg">
         Welcome to RysthCraft's Portfolio. I'm John Palacios, a Software
-        Developer, weaving digital sites with React, TailwindCSS and Ruby on
-        Rails.
+        Developer, weaving digital sites with React, Astro, and Ruby on Rails.
       </p>
       <div class="flex items-center justify-center gap-3 md:justify-start">
         <Link route="https://github.com/Rysth" classVariant="btn btn-gradient">
