--- a/src/pages/sections/index/FeatureSection.astro
+++ b/src/pages/sections/index/FeatureSection.astro
@@ -1,11 +1,12 @@
 ---
+import * as ReactIcons from "react-icons/fa/index.js";
 import Project1 from "../../../assets/images/projects/project_1.png";
 import Project2 from "../../../assets/images/projects/project_2.png";
 import Project3 from "../../../assets/images/projects/project_3.png";
 import Project4 from "../../../assets/images/projects/project_4.png";
 import Card from "../../../components/ui/Card/Card.astro";
 import Link from "../../../components/ui/Link/Link.jsx";
-import { FaArrowRight, FaBars } from "react-icons/fa";
+const { FaArrowRight } = ReactIcons;
 
 const projectsData = [
   {
