Move brand images to one common folder.

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import * as ReactIcons from "react-icons/fa/index.js";
-import BrandLogo from "../../assets/images/brand.svg";
+import BrandLogo from "../../assets/images/brand/brand.svg";
 import Link from "../ui/Link/Link";
 const { FaInstagram, FaLinkedin, FaGithub } = ReactIcons;
 ---
@@ -15,7 +15,7 @@ const { FaInstagram, FaLinkedin, FaGithub } = ReactIcons;
         <Image
           src={BrandLogo}
           class="w-48 mx-auto lg:mx-0 sm:w-72 lg:w-96"
-          alt="RysthCraft brand"
+          alt="RysthCraft brand image"
         />
       </Link>
       <div
