--- a/src/components/Navigation/Navigation.astro
+++ b/src/components/Navigation/Navigation.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import * as ReactIcons from "react-icons/fa/index.js";
-import BrandImage from "../../assets/images/brand.svg";
+import BrandImage from "../../assets/images/brand/brand.svg";
 import Link from "../ui/Link/Link";
 import NavigationItem from "./NavigationItem.astro";
 const { FaBars } = ReactIcons;
