--- a/src/pages/sections/about/HeroSection.astro
+++ b/src/pages/sections/about/HeroSection.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import * as ReactIcons from "react-icons/fa/index.js";
 import BannerImage from "../../../assets/images/brand/banner.png";
-import ProfileImage from "../../../assets/images/hero.png";
+import ProfileImage from "../../../assets/images/brand/hero.png";
 import Section from "../../../layouts/Section.astro";
 const { FaLinkedin } = ReactIcons;
 ---
