Create navigation folder.

--- a/src/components/navigation/Footer/Footer.astro
+++ b/src/components/navigation/Footer/Footer.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from "astro:assets";
 import * as ReactIcons from "react-icons/fa/index.js";
-import BrandLogo from "../../assets/images/brand/brand.svg";
-import Link from "../ui/Link/Link";
+import BrandLogo from "../../../assets/images/brand/brand.svg";
+import Link from "../../ui/Link/Link";
 const { FaInstagram, FaLinkedin, FaGithub } = ReactIcons;
 ---
 
