--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,8 +3,8 @@ import "animate.css";
 interface Props {
   title: string;
 }
-import Navigation from "../components/Navigation/Navigation.astro";
-import Footer from "../components/Footer/Footer.astro";
+import NavBar from "../components/navigation/NavBar/NavBar.astro";
+import Footer from "../components/navigation/Footer/Footer.astro";
 
 const { title } = Astro.props;
 ---
@@ -20,7 +20,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <Navigation />
+    <NavBar />
     <slot />
     <Footer />
     <script
